# hello-actix

./: .gitignore  Cargo.toml  config.json  license-apache  license-mit  readme.md  requests.http  rustfmt.toml  todos.json
.github/workflows/: rust.yml
authorization/: Cargo.toml  readme.md
authorization/requests/: index.http  requests.http
authorization/src/: errors.rs  main.rs  tasks.rs  users.rs
authorization/src/tasks/: errors.rs  models.rs  routes.rs
authorization/src/tasks/requests/: delete.http  favorite.http  find.http  insert.http  update.http
authorization/src/users/: errors.rs  models.rs  routes.rs
authorization/src/users/queries/: find_all.sql
authorization/src/users/requests/: auth.http  delete.http  find.http  insert.http  login.http  update.http
authorization/strings/: welcome.txt
cleanup/: Cargo.toml  readme.md
cleanup/cleanup-lib/: Cargo.toml
cleanup/cleanup-lib/queries/: create_database.sql
cleanup/cleanup-lib/src/: errors.rs  lib.rs  tasks.rs  users.rs
cleanup/cleanup-lib/src/tasks/: models.rs  routes.rs
cleanup/cleanup-lib/src/tasks/queries/: done.sql  find_all.sql  find_by_id.sql  find_by_pattern.sql  find_ongoing.sql  insert.sql  update.sql
cleanup/cleanup-lib/src/users/: errors.rs  models.rs
cleanup/cleanup-lib/src/users/queries/: login.sql  update.sql
cleanup/cleanup-lib/tests/: test_task_routes.rs  test_user_routes.rs
cleanup/cleanup-lib/tests/common/: mod.rs
cleanup/src/: main.rs
cookies/: Cargo.toml  build.rs  readme.md
cookies/queries/: find_ongoing.sql
cookies/requests/: favorite.http  find.http  index.http
cookies/src/: errors.rs  main.rs  models.rs  routes.rs
databases/: todo.sql
databases/queries/: create_database.sql  delete.sql  find_by_id.sql  insert.sql  update.sql
experiments/: Cargo.toml  requests.http  todos.json
experiments/src/: errors.rs  main.rs  model.rs
in-memory/: Cargo.toml  notes.md  readme.md
in-memory/requests/: index.http
in-memory/src/: main.rs  routes.rs
integration/: Cargo.toml  readme.md
integration/integration-lib/: Cargo.toml
integration/integration-lib/src/: lib.rs  tasks.rs
integration/integration-lib/src/tasks/: models.rs  routes.rs
integration/integration-lib/src/tasks/queries/: delete.sql  find_all.sql
integration/integration-lib/src/users/queries/: insert.sql
integration/integration-lib/tests/: test_task_routes.rs  test_user_routes.rs
integration/integration-lib/tests/common/: mod.rs
integration/src/: main.rs
login/: Cargo.toml  build.rs  readme.md
login/queries/: create_database.sql
login/requests/: delete.http  insert.http  update.http
login/service/: Cargo.toml  config.json
login/service/src/: lib.rs  routes.rs
login/src/: main.rs  routes.rs  tasks.rs  users.rs
login/src/tasks/: errors.rs  models.rs  routes.rs
login/src/tasks/queries/: done.sql  insert.sql  undo.sql
login/src/tasks/requests/: delete.http  find.http  update.http
login/src/users/: models.rs  routes.rs
login/src/users/requests/: delete.http  find.http  insert.http  login.http  update.http  user.http
login/strings/: welcome.txt
minimal/: Cargo.toml  readme.md
minimal/requests/: index.http
minimal/src/: main.rs
minimal/strings/: welcome.txt
sqlite/: Cargo.toml  build.rs  readme.md
sqlite/queries/: find_all.sql  find_by_id.sql  find_by_pattern.sql  update.sql
sqlite/requests/: find.http  index.http  insert.http  update.http
sqlite/src/: errors.rs  main.rs  models.rs  routes.rs
src/: errors.rs  main.rs  model.rs  routes.rs
tls/: Cargo.toml  readme.md  requests.yaml
tls/src/: main.rs
tls/tls-lib/: Cargo.toml
tls/tls-lib/certificates/: cert.pem  key.pem
tls/tls-lib/requests/: requests.http
tls/tls-lib/src/: lib.rs
tls/tls-lib/src/tasks/: errors.rs  models.rs  routes.rs
tls/tls-lib/src/tasks/queries/: done.sql  find_ongoing.sql  undo.sql
tls/tls-lib/src/users/: models.rs  routes.rs
tls/tls-lib/src/users/queries/: delete.sql  find_by_id.sql
tls/tls-lib/tests/: test_task_routes.rs  test_user_routes.rs
tls/tls-lib/tests/common/: mod.rs
