[package]
name = "experiments"
version = "0.1.0"
authors = ["meowjesty <meowjesty_nyan@outlook.com>"]
edition = "2018"
description = "Hello, actix!"
homepage = "https://github.com/meowjesty/hello-actix"
repository = "https://github.com/meowjesty/hello-actix/"
license = "MIT OR Apache-2.0"
keywords = ["actix-web", "webdev", "reference"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
futures = { version = "0.3" }
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "sqlite", "macros" ] }
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
derive_more = "0.99"
thiserror = "1.0"
