[package]
name = "sqlite"
version = "0.1.0"
authors = ["meowjesty <meowjesty_nyan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
thiserror = "*"
sqlx = { version = "*", features = [ "runtime-actix-rustls", "sqlite", "macros" ] }

[dev-dependencies]
actix-rt = "*"
