[package]
name = "tls"
version = "0.1.0"
authors = ["meowjesty <meowjesty_nyan@outlook.com>"]
edition = "2018"
description = "Hello, actix!"
homepage = "https://github.com/meowjesty/hello-actix"
repository = "https://github.com/meowjesty/hello-actix/"
license = "MIT OR Apache-2.0"
keywords = ["actix-web", "webdev", "reference"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tls-lib = { path = "tls-lib" }
actix-web = { version = "4.0.0-beta.8" }
env_logger = "0.9"
