[package]
name = "integration-lib"
version = "0.1.0"
edition = "2018"
description = "Hello, actix!"
homepage = "https://github.com/meowjesty/hello-actix"
repository = "https://github.com/meowjesty/hello-actix/"
license = "MIT OR Apache-2.0"
keywords = ["actix-web", "webdev", "reference"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.19" }
actix-session = { version = "0.5.0-beta.7" }
actix-identity = { version = "0.4.0-beta.7" }
actix-web-httpauth = { version = "0.6.0-beta.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "sqlite" ] }
env_logger = "0.9"
log = "0.4"
futures = "0.3"
time = "0.3"

[dev-dependencies]
actix-rt = "2.5"
